@@ -15,6 +15,7 @@ Pint Changelog
   (Issue #1244)
 - Fix string formatting of numpy array scalars
 - Fix default format for Measurement class (Issue #1300)
+- Fix parsing of pretty units with same exponents but different sign. (Issue #1360)
 
 ### Breaking Changes
 
